--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "node-rsync"
+    "name": "js-rsync"
   , "version": "0.0.1"
-  , "description": "rsync implemented in node over http"
-  , "keywords": []
+  , "description": "rsync implemented in node.js over http"
+  , "keywords": ["rsync", "node", "javascript"]
   , "author": "Tolga Tezel <tolgatezel11@gmail.com>"
   , "contributors": ["Mihai Tomescu <matomesc@gmail.com>"]
   , "dependencies": {
@@ -16,5 +16,4 @@
       , "colors": ">=0.5.1"
     }
   , "main": "index"
-  , "engines": { "node": "0.5 || 0.6" }
 }
