--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   , "version": "0.0.1"
   , "description": "rsync implemented in node.js over http"
   , "keywords": ["rsync", "node", "javascript"]
-  , "author": "Tolga Tezel <tolgatezel11@gmail.com>"
-  , "contributors": ["Mihai Tomescu <matomesc@gmail.com>"]
+  , "author": "Carlos Galarza <carloslfu@gmail.com>"
+  , "contributors": [
+    "Mihai Tomescu <matomesc@gmail.com>",
+    "Tolga Tezel <tolgatezel11@gmail.com>"
+  ]
   , "dependencies": {
         "formidable": ">=1.0.6"
       , "restify": ">=0.5.4"
